recursion.cons.ismember.IsMember.scala.error
Compilation error:
IsMember:7: error: type mismatch;
 found   : Unit
 required: Boolean
  if (l.tail == v)
  ^